--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sayan Web Page</title>
+	<link rel="stylesheet" href = "CSS/styles1.css"> 
 
+	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet"> 
+
+	<script src="https://kit.fontawesome.com/31d5b7635d.js" crossorigin="anonymous"></script>
 </head>
 <body>
 		<header>
-			<nav class="topnav" id="myTopnov">
+			<nav class="topnav" id="myTopnav">
 				<a class="selected" href="index.html">Home</a>
 				<a href="about.html">About</a>
 				<a href="connect.html">Connect</a>
@@ -19,7 +23,7 @@
 		</header>
 
 		<main>
-			<h3 class="animate-header"> <span class = "animate1">Hello Everyone! This is one of my Web Page developed by me.</span></h3>
+			<h3 class="animate-header">, <span class = "animate1">Hello Everyone! This is one of my Web Page developed by me.</span></h3>
 			<p id="myself">Let me introduce myself!<br>I am Sayan,Currently a CS undergrad at GCETTS.Click the above right side button to know the details about me.</p>
 		</main>
 		<footer>
