--- a/connect.html
+++ b/connect.html
@@ -8,7 +8,7 @@
 
 	<script src="https://kit.fontawesome.com/31d5b7635d.js" crossorigin="anonymous"></script>
 
-	<link rel="stylesheet" href = "CSS/styles3.css">
+	<link rel="stylesheet" href = "styles3.css">
 
 	<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap" rel="stylesheet"> 
 </head>
