--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Oswald&family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href = "CSS/styles2.css">
+	<link rel="stylesheet" href = "styles2.css">
 
 	<link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Merriweather+Sans&display=swap" rel="stylesheet"> 
 
