--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sayan Web Page</title>
-	<link rel="stylesheet" href = "CSS/styles1.css"> 
+	<link rel="stylesheet" href = "styles1.css"> 
 
 	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet"> 
 
