--- a/about.html
+++ b/about.html
@@ -48,9 +48,11 @@
 
 	<main>
 		<details>
-			<summary><b>A bit of myself</b></summary>
-			<p>I was born at Ramnagar,Tarakeswar under the district of Hooghly,West Bengal on 20 July in 2000.My Nickname is Sanu.
-			Currently a undergrad student at GCETTS in Computer Science & Engineering (CSE) .I have done the project for the final course Web Design Specialiazation.
+			<summary><b>A bit of myself (Click on it to see)</b></summary>
+			<p>I was born at Ramnagar,Tarakeswar under the district of Hooghly,West Bengal on 20 July in 2000.My Nickname is Sanu.I started my education at the age of 4 yr. When I was 4 yrs of age then I admitted at Shishuniketan Primary School.The Head Mistress was Namita Chakraborty.After completing this primary level,In 2010 I was admitted to a High School named Ramnagar N.B.P.C. High School(H.S.)</a>.The Head master was Soumesh Chatterjee (Present now) .Then In 2016,I've passed Madhyamik Examination.After passing WBBSE,I have choosen Science Stream.Then in 2018,I've also passed Higher Secondary Examination.Many Memorable days are present about the school. Then after passing my school life I have attended West Bengal Joint Entrance Examination in current year 2018.In this Examination, I achieved 7k aaprox Rank from General Quota.Then in Counselling,I have got the opportunity to do my B.Tech at Govt. College of Engineering and Textile Technology,Serampore(GCETTS) in Computer Science and Engineering(CSE).
+				<br> This is one of My Web Page, developed by me. Let's take a look some details about me.Click each of the topic below and each of the link given in the topic to know the details. </br>
+
+			
 		 </p>
 		</details>
 
@@ -65,6 +67,8 @@
 				</ul>
 			
 		</section>
+
+		
 
 		<section class="achievement">
 			<h3>Achievements</h3>
