--- a/about.html
+++ b/about.html
@@ -73,17 +73,17 @@
 		<section class="achievement">
 			<h3>Achievements</h3>
 			<ol type="A">
-				<li><b>Certificate of Introduction to HTML5</b> can be verified <a href="https://www.coursera.org/account/accomplishments/certificate/U85XXB9BR45A" target="_blank">here</a>.</li>
+				<li><b>Certificate of Introduction to HTML5</b> can be verified <a href="https://www.coursera.org/account/accomplishments/certificate/U85XXB9BR45A" target="_blank">click here</a>.</li>
 
-				<li><b>Certificate of Introduction to CSS3</b> can be verified <a href="https://www.coursera.org/account/accomplishments/certificate/CD9FD3FELMY8" target="_blank">here</a>.</li>
+				<li><b>Certificate of Introduction to CSS3</b> can be verified <a href="https://www.coursera.org/account/accomplishments/certificate/CD9FD3FELMY8" target="_blank">click here</a>.</li>
 
-				<li><b>Certificate of Interactivity with Javascript</b> can be verified <a href="https://www.coursera.org/account/accomplishments/certificate/HGHV9UG2B8XP" target="_blank">here</a>.</li>
+				<li><b>Certificate of Interactivity with Javascript</b> can be verified <a href="https://www.coursera.org/account/accomplishments/certificate/HGHV9UG2B8XP" target="_blank">click here</a>.</li>
 
-				<li><b>Certificate of Advanced Styling with Responsive Design</b> can be verified <a href="https://www.coursera.org/account/accomplishments/certificate/5J3L4QHDZ2AB" target="_blank">here</a>.</li>
+				<li><b>Certificate of Advanced Styling with Responsive Design</b> can be verified <a href="https://www.coursera.org/account/accomplishments/certificate/5J3L4QHDZ2AB" target="_blank">click here</a>.</li>
 
-				<li><b>Certificate of Mathematics for Machine Learning: Multivariate Calculus</b> can be verified <a href="https://www.coursera.org/account/accomplishments/certificate/EQUFBLBTUKHB" target="_blank">here</a>.</li>
+				<li><b>Certificate of Mathematics for Machine Learning: Multivariate Calculus</b> can be verified <a href="https://www.coursera.org/account/accomplishments/certificate/EQUFBLBTUKHB" target="_blank">click here</a>.</li>
 
-				<li><b>Certificate of Introduction to Philosophy</b> can be verified <a href="https://www.coursera.org/account/accomplishments/certificate/M235P6JXBBHJ" target="_blank">here</a>.</li>
+				<li><b>Certificate of Introduction to Philosophy</b> can be verified <a href="https://www.coursera.org/account/accomplishments/certificate/M235P6JXBBHJ" target="_blank">click here</a>.</li>
 
 			</ol>
 			
