--- a/about.html
+++ b/about.html
@@ -59,11 +59,11 @@
 		<section class="hobby">
 			<h3>Current Hobbies</h3>
 				<ul>
-					<li>Playing and Watching Cricket of all time.</li>
-					<li>Watching Movies(Bengali,Hindi),Wrestling(WWE)</li>
-					<li>Playing different Mobile games,PC games etc.</li>
-					<li>Listening Songs(Hindi Basically)</li>
-					<li>Drawing in leisure</li>
+					<li>Like to play and watch Cricket of all time.</li>
+					<li>Like to watch Movies(Bengali,Hindi),Wrestling(WWE)</li>
+					<li>Like to play Chess and PC games etc.</li>
+					<li>Like to listen Songs(Hindi Basically)</li>
+					<li>Like to draw in leisure</li>
 				</ul>
 			
 		</section>
