--- a/connect.html
+++ b/connect.html
@@ -37,8 +37,8 @@
 		<section class="food">
 			<h3>Favourite Foods</h3>
 				<ul>
-					<li>Fried Rice & Chilli Chicken</li>
-					<li>Mutton Kari</li>
+					<li>Fried Rice & Chicken Kasha</li>
+					<li>Chicken Biriyani,Mutton Kari</li>
 					<li>Prawn Fish.</li>
 					<li>Chicken Chowmin, Momo etc..</li>
 				</ul>
@@ -54,7 +54,7 @@
 				
 				<li>Email: <a href="#">sayanbhar2000@gmail.com</a>&nbsp;<i class="fas fa-envelope-square fa-2x"></i></li>
 				
-				<li>Facebook: <a href="https://www.facebook.com/sb.sayan62" title="Sayan Bhar" target="_blank">Sayan Bhar</a>&nbsp;<i class="fab fa-facebook fa-2x"></i></li>
+				<li>Facebook: <a href="https://www.facebook.com/sb.sayan021" title="Sayan Bhar" target="_blank">Sayan Bhar</a>&nbsp;<i class="fab fa-facebook fa-2x"></i></li>
 
 				<li>Instagram: <a href="https://www.instagram.com/its___sayan/" title="Instagram" target="_blank">its___sayan</a>&nbsp;<i class="fab fa-instagram fa-2x"></i></li>
 
