--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 		<main>
 			<h3 class="animate-header">, <span class = "animate1">Hello Everyone! This is one of my Web Page developed by me.</span></h3>
-			<p id="myself">Let me introduce myself!<br>I am Sayan,Currently a CS undergrad at GCETTS.Click the above right side button to know the details about me.</p>
+			<p id="myself">Let me introduce myself!<br>I'm Sayan,Currently a CS undergrad at GCETTS.Click the above right side button to know the details about me.</p>
 		</main>
 		<footer>
 			Made by <span>&nbsp;&#10084;&nbsp;</span> by Sayan Bhar<br>
